# Tetris

./: CMakeLists.txt  main.c
common/: base.c  base.h
control/: gamecontrol.c  gamecontrol.h  setgame.c  setgame.h
data/: gamedata.c  gamedata.h
view/: Keyhander.c  Keyhander.h  controlpanel.c  controlpanel.h  ganmepanel.c  ganmepanel.h  panel.c  panel.h  rankpanel.c  rankpanel.h  settingpanel.c  settingpanel.h  trailerpanel.c  trailerpanel.h
